chsdi/public/GeoAdmin.ux/BaseLayerTool/css/baselayertool.css
.geoadmin-baselayertool .geoadmin-baselayertool-label {
    font: bold 12px arial,helvetica,verdana,sans-serif;
    /* line-height is set to a sensible value here. If not
       set the label isn't postioned as we want it to when
       the BaseLayerTool is placed in an Ext toolbar. */
    line-height: 22px;
}

.x-form-field-wrap .x-form-trigger {
    background:transparent url(../img/trigger.gif) no-repeat scroll 0 0;
    border-color:-moz-use-text-color -moz-use-text-color #B5B8C8;
    border-style:none none solid;
    border-width:0 0 1px;
    cursor:pointer;
    height:21px;
    position:absolute;
    width:17px;
}

.x-slider-horz {
    background:transparent url(../img/slider-bg.png) no-repeat scroll 0 -22px;
    padding-left:7px;
}

.x-slider-horz .x-slider-inner {
    background:transparent url(../img/slider-bg.png) repeat-x scroll 0 0 !important;
}

.x-slider-horz .x-slider-end {
    background:transparent url(../img/slider-bg.png) no-repeat scroll right -44px !important;
}

.x-slider-horz .x-slider-thumb {
    background:transparent url(../img/lo_cursor_opacity.png) no-repeat scroll 0 0;
    cursor: pointer;
    height:28px;
    top:7px;
    width:7px;
}

.geoadmin-baselayertool input {
    font-weight: bold !important;
}

